--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,7 @@
 
+/* styling our main content */
+.tabla-libros-cabezera {
+  background-color: #ce4ae2;
+  color: white;
+  border: 1px solid #d8d2c9;
+}
