--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
 
 /* styling our main content */
+.tabla-libros {
+  width: 100%;
+}
+
 .tabla-libros-cabezera {
   background-color: #ce4ae2;
   color: white;
   border: 1px solid #d8d2c9;
+  height: 50px;
 }
