--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,11 @@
   color: white;
   height: 50px;
 }
+
+
+.tabla-resultado {
+  border-collapse: collapse;
+  width: 40%;
+  margin-left: auto;
+  margin-right: auto;
+}
